# computer_shop

./: README.md  main.py  pyproject.toml  run.py
app/: config.py  database.py  models.py  schemas.py
app/bot/: main.py  state_machine.py
app/bot/handlers/: common.py  seller.py  user.py
app/bot/keyboards/: seller.py  user.py
app/crud/: product.py  user.py
app/database/: models.py  schemas.py  sqlalchemy.py
app/database/crud/: order.py  product.py  user.py
bot/: botconfig.py  run.py
